--- a/exercicio1_html/index.html
+++ b/exercicio1_html/index.html
@@ -41,6 +41,7 @@
         <img src="img/exemplo.png" alt="Exemplo de Aplicação de Inteligência Artificial" title="exemplo de IA"> </a>
         <a href="https://brasilescola.uol.com.br/informatica/inteligencia-artificial.html"><p>saiba mais</p></a>
     </section>
+    <p> Nome: Erica Regnier</br> data: 08/07/24</p>
 </body>
 
 </html>
