--- a/exercicio1_html/index.html
+++ b/exercicio1_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inteligência Artificial</title>
+    <title>exercicio 1 - html</title>
 </head>
 
 <body>
