--- a/exercicio1_html/index.html
+++ b/exercicio1_html/index.html
@@ -56,19 +56,12 @@
         </div>
         <div id="leftcolumnwrap">
             <div id="leftcolumn">
-                <h3>Menu</h3>
-                <ul>
-                    <li><a href="#">Introdução</a></li>
-                    <li><a href="#">História</a></li>
-                    <li><a href="#">Aplicações</a></li>
-                    <li><a href="#">Futuro da IA</a></li>
-                </ul>
-                <h3>Links Úteis</h3>
-                <ul>
-                    <li><a href="https://www.google.com">Google</a></li>
-                    <li><a href="https://www.wikipedia.org">Wikipedia</a></li>
-                    <li><a href="https://www.openai.com">OpenAI</a></li>
-                </ul>
+                <h3>Curiosidades:</h3>
+                <mark>Robôs com IA podem se consertar</mark></br>
+
+                Cientistas da Universidade Nanyang Technological de Singapura já conseguiram desenvolver um robô que utiliza</br> a inteligência artificial para detectar quando tem algo errado em seu corpo e se auto-consertar.</br>
+
+                O sistema conta com sensores capazes de detectar quando há alguma força física fazendo pressão em algumas</br> das partes do robô e também permite que eles possam detectar e consertar danos menores sem a intervenção humana.</br>
             </div>
         </div>
     </div>
