--- a/exercicio 4/Home.html
+++ b/exercicio 4/Home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercicio 4 - html</title>
+    <link rel="stylesheet" href="style_home.css">
+
 </head>
 
 <body>
@@ -19,7 +21,9 @@
         
 
     </section>
-    <img src="img/receitas.jpg" alt="foto", title="foto site receitas", width="400px", height="400px"> </a>
+    <h3>Aqui você encontra receitas fáceis e rápidas para o seu dia a dia!</h3></br></br>
+
+    <img src="img/receitas.jpg" alt="foto", title="foto site receitas", width="700px", height="500px"> </a>
 
 
 
