--- a/exercicio 4/Contato.html
+++ b/exercicio 4/Contato.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 4 - HTML</title>
+    <link rel="stylesheet" href="style_contato.css">
+
 </head>
 
 <body>
