--- a/exercicio 4/Video.html
+++ b/exercicio 4/Video.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercicio 4 - html</title>
+    <link rel="stylesheet" href="style_video.css">
+
 </head>
 
 <body>
     <h1>Vídeo</h1>
-    </section>
     <section>
         <p>
-            <a href="Home.html">Home |</a> 
+            <a href="Home.html">Home |</a>
             <a href="Receita.html">Receita |</a>
             <a href="Video.html">Video |</a>
             <a href="Contato.html">Contato </a>
         </p>
-        
+
     </section>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/PZPXP1CYRIQ" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PZPXP1CYRIQ" frameborder="0"
+        allowfullscreen></iframe>
 
 
 
-    <footer>    
+    <footer>
         <p> Nome: Erica Regnier</br> data: 09/07/24</p>
     </footer>
-    
 </body>
+
 </html>
