--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <h3>Curiosidades:</h3>
                 <mark>Robôs com IA podem se consertar</mark></br>
 
-                Cientistas da Universidade Nanyang Technological de Singapura já conseguiram desenvolver um robô que utiliza</br> a inteligência artificial para detectar quando tem algo errado em seu corpo e se auto-consertar.</br>
+                Cientistas da Universidade Nanyang Technological de Singapura já conseguiram desenvolver um robô que utiliza</br> a inteligência artificial para detectar quando tem algo errado em seu corpo e se auto-consertar.<br/>
 
-                O sistema conta com sensores capazes de detectar quando há alguma força física fazendo pressão em algumas</br> das partes do robô e também permite que eles possam detectar e consertar danos menores sem a intervenção humana.</br>
+                O sistema conta com sensores capazes de detectar quando há alguma força física fazendo pressão em algumas</br> das partes do robô e também permite que eles possam detectar e consertar danos menores sem a intervenção humana.<br/>
             </div>
         </div>
     </div>
