--- a/exercicio 4/Home.html
+++ b/exercicio 4/Home.html
@@ -21,7 +21,7 @@
         
 
     </section>
-    <h3>Aqui você encontra receitas fáceis e rápidas para o seu dia a dia!</h3></br></br>
+    <h3>Aqui você encontra receitas fáceis e rápidas para o seu dia a dia!</h3><br/><br/>
 
     <img src="img/receitas.jpg" alt="foto", title="foto site receitas", width="700px", height="500px"> </a>
 
